# shader-editor

./: .gitignore  Cargo.toml  LICENSE  README.md
shaders/: pattern_1.wgsl  pattern_2.wgsl
src/: controls.rs  editor.rs  highlighter.rs  main.rs  shader.wgsl  validator.rs  watch.rs
src/scene/: mod.rs  rectangle.rs  rectangle_pipeline.rs
