[package]
name = "shader-editor"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2021"

[dependencies]
bytemuck = "1.22"
futures = "0.3.31"
notify = "6.1.1"
syntect = "5.2.0"
wgpu-types = "24.0.0"

[dependencies.iced]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "fd5ed0d"
features = ["highlighter", "tokio", "debug", "advanced"]

[dependencies.iced_core]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "fd5ed0d"

[dependencies.iced_widget]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "fd5ed0d"

[dependencies.iced_wgpu]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "fd5ed0d"

[dependencies.iced_winit]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "fd5ed0d"
