[package]
name = "shader-editor"
version = "0.1.0"
authors = ["ibaryshnikov"]
edition = "2024"

[dependencies]
bytemuck = "1.24"
futures = "0.3.31"
naga = "27.0"
notify = "6.1.1"
syntect = "5.3.0"
wgpu-types = "27.0"

[dependencies.iced]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "41d930b"
features = ["highlighter", "tokio", "debug", "advanced"]

[dependencies.iced_core]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "41d930b"

[dependencies.iced_widget]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "41d930b"

[dependencies.iced_wgpu]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "41d930b"

[dependencies.iced_winit]
# version = "0.14"
git = "https://github.com/iced-rs/iced.git"
rev = "41d930b"
